--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -182,7 +182,7 @@ jobs:
       DOCKER_IO_USER: ${{ secrets.WGE_DOCKER_IO_USER }} 
       DOCKER_IO_PASSWORD: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
       MCCP_BIN_PATH: ${{ github.workspace }}/cmd/mccp/mccp-${{ matrix.os }}
-      WEGO_BIN_PATH: ${{ github.workspace }}/cmd/wego/wego-${{ matrix.os_name }}-x86_64
+      GITOPS_BIN_PATH: ${{ github.workspace }}/cmd/gitops/gitops-${{ matrix.os_name }}-x86_64
       WKP_BIN_PATH: ${{ github.workspace }}/cmd/wk/wk-v2.5.0-${{ matrix.os_name }}-amd64
       SELENIUM_DEBUG: true
       ACCEPTANCE_TESTS_DATABASE_TYPE: sqlite
@@ -247,11 +247,13 @@ jobs:
       with:
         name: mccp-binaries
         path: cmd/mccp
-    - name: Download wego binary from GitHub
-      run: |
-        mkdir -p cmd/wego/
-        wget https://github.com/weaveworks/weave-gitops/releases/download/v0.2.4/wego-${{ matrix.os_name }}-x86_64
-        mv wego-${{ matrix.os_name }}-x86_64 $WEGO_BIN_PATH
+    - name: Download gitops binary from GitHub
+      uses: Legion2/download-release-action@v2.1.0
+      with:
+        repository: weaveworks/weave-gitops
+        tag: 'v0.3.0'
+        path: cmd/gitops/
+        file: gitops-${{ matrix.os_name }}-x86_64
     - name: Download wk binary from s3
       run: |
         mkdir -p cmd/wk/
@@ -259,7 +261,7 @@ jobs:
     - name: Change bin permissions
       run: |
         sudo chmod +x ${{ env.MCCP_BIN_PATH }}
-        sudo chmod +x ${{ env.WEGO_BIN_PATH }}
+        sudo chmod +x ${{ env.GITOPS_BIN_PATH }}
         sudo chmod +x ${{ env.WKP_BIN_PATH }}  
     - name: Setup selenium server
       run: |
@@ -286,12 +288,11 @@ jobs:
         kubectl get pods -A     
     - name: Install mccp componenets on management cluster
       run: |
-        CLUSTER_REPOSITORY=mccp-capi-template-${{ github.run_id }}-$(openssl rand -hex 8)
+        export CLUSTER_REPOSITORY=mccp-capi-template-${{ github.run_id }}-$(openssl rand -hex 8)
         # Set the CLUSTER_REPOSITORY as environment variable for subsequent steps
         echo "CLUSTER_REPOSITORY=$CLUSTER_REPOSITORY" >> $GITHUB_ENV
 
-        ./test/utils/scripts/wego-enterprise.sh setup $CLUSTER_REPOSITORY ${{ github.workspace }}
-        kubectl port-forward -n wego-system svc/my-mccp-nginx-ingress-controller 8090:80 &
+        ./test/utils/scripts/wego-enterprise.sh setup ${{ github.workspace }}
     - name: Setup wkp leaf cluster
       run: |
         kind create cluster --name my-wkp-leaf-cluster --image=kindest/node:v1.20.7 --config test/utils/data/kind-config.yaml --kubeconfig $MCCP_KIND_WKP_LEAF_KUBECONFIG
