--- a/charts/mccp/templates/clusters-service/internal-ingress.yaml
+++ b/charts/mccp/templates/clusters-service/internal-ingress.yaml
@@ -19,4 +19,5 @@ spec:
     - http:
         paths:
           - path: /v1/?(.*)
+            pathType: ImplementationSpecific
             backend: {{- include "common.ingress.backend" (dict "serviceName" "clusters-service" "servicePort" 8000 "context" $)  | nindent 14 }}
