--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -278,8 +278,9 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y xvfb
         sudo apt-get install -y google-chrome-stable
+        CHROME_VERSION=$(google-chrome --version | awk '{print $3}')
 
-        wget https://chromedriver.storage.googleapis.com/92.0.4515.107/chromedriver_linux64.zip
+        wget https://chromedriver.storage.googleapis.com/"${CHROME_VERSION}"/chromedriver_linux64.zip
         unzip chromedriver_linux64.zip
         sudo mv -f chromedriver /usr/local/bin/chromedriver
 
@@ -386,8 +387,9 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y xvfb
         sudo apt-get install -y google-chrome-stable
+        CHROME_VERSION=$(google-chrome --version | awk '{print $3}')
 
-        wget https://chromedriver.storage.googleapis.com/92.0.4515.107/chromedriver_linux64.zip
+        wget https://chromedriver.storage.googleapis.com/"${CHROME_VERSION}"/chromedriver_linux64.zip
         unzip chromedriver_linux64.zip
         sudo mv -f chromedriver /usr/local/bin/chromedriver
 
@@ -511,8 +513,9 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y xvfb
         sudo apt-get install -y google-chrome-stable
+        CHROME_VERSION=$(google-chrome --version | awk '{print $3}')
 
-        wget https://chromedriver.storage.googleapis.com/92.0.4515.107/chromedriver_linux64.zip
+        wget https://chromedriver.storage.googleapis.com/"${CHROME_VERSION}"/chromedriver_linux64.zip
         unzip chromedriver_linux64.zip
         sudo mv -f chromedriver /usr/local/bin/chromedriver
 
