--- a/charts/mccp/templates/nats/nats-env-vars-secret.yaml
+++ b/charts/mccp/templates/nats/nats-env-vars-secret.yaml
@@ -12,5 +12,5 @@ data:
   {{- else if .Values.NATS_AUTH_TOKEN }}
   NATS_AUTH_TOKEN: {{ .Values.NATS_AUTH_TOKEN | b64enc | quote }}
   {{- else }}
-  NATS_AUTH_TOKEN: {{ randAlphaNum 20 | b64enc | quote }}
+  NATS_AUTH_TOKEN: {{ randAlpha 20 | b64enc | quote }}
   {{- end }}
