[WGE-69] Update Ingress in WGE chart (#87)
* Update ingress to networking/v1

* Add else if

* Fix linting

* Add ingress apiVersion to _helpers

* Use GitVersion

* Add support for backend in different ingress versions

* Add support for annotation check

* Remove new line

* Add new line

* remove new line

* Fix error

* Fix comparison

* Check k8s version

* Remove if condition for port number

* Convert port to int

* Revert

* Switch path and backend

* Revert changes

* Use GitVersion

* Fix class name comparison

* Test with static data

* Rever cluster-server

* Refactor

* Use static annotation class

* Check older yaml files

* Check kube version

* Pass kube version

* Revert changes

* Use GitVersion

* remove curly brackets from comments

* Use template

* Add include

* Use include with backend:

* Revert inlcude

* Return template

* Add pathType

* Add include instead of template

Co-authored-by: Simon Howe <footless@gmail.com>

--- a/charts/mccp/templates/gitops-repo-broker/internal-ingress.yaml
+++ b/charts/mccp/templates/gitops-repo-broker/internal-ingress.yaml
@@ -1,23 +1,23 @@
 ---
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1beta1
-{{- else -}}
-apiVersion: extensions/v1beta1
-{{- end }}
+apiVersion: {{ include "common.capabilities.ingress.apiVersion" . }}
 kind: Ingress
 metadata:
   annotations:
+    {{- if eq (include "common.ingress.supportsIngressClassAnnotation" .) "true" }}
     kubernetes.io/ingress.class: mccp-nginx
+    {{- end }}
     nginx.ingress.kubernetes.io/rewrite-target: /gitops/$1
   labels:
     app: gitops-repo-broker
   name: gitops-repo-broker
   namespace: {{ .Release.Namespace | quote }}
 spec:
+  {{- if eq (include "common.ingress.supportsIngressClassname" .) "true" }}
+  ingressClassName: mccp-nginx
+  {{- end }}
   rules:
     - http:
         paths:
-          - backend:
-              serviceName: gitops-repo-broker
-              servicePort: 8000
-            path: /gitops/?(.*)
+          - path: /gitops/?(.*)
+            pathType: ImplementationSpecific
+            backend: {{- include "common.ingress.backend" (dict "serviceName" "gitops-repo-broker" "servicePort" 8000 "context" $)  | nindent 14 }}
