Move entitlement into common package

--- a/cmd/event-writer/Dockerfile
+++ b/cmd/event-writer/Dockerfile
@@ -1,36 +1,42 @@
 FROM golang:1.17 as builder
-ENV EWPATH=cmd/event-writer
 
-WORKDIR /workspace/$EWPATH
+ENV EW_PATH=cmd/event-writer
+
+WORKDIR /workspace/$EW_PATH
 
 # copy in other module dependencies
 COPY /common/ /workspace/common/
 
-COPY $EWPATH/go.mod go.mod
-COPY $EWPATH/go.sum go.sum
+# copy modules manifests
+COPY $EW_PATH/go.mod go.mod
+COPY $EW_PATH/go.sum go.sum
+
+ENV GOPRIVATE=github.com/weaveworks/weave-gitops-enterprise-credentials
+ENV GITHUB_BUILD_USERNAME=wge-build-bot
+ARG GITHUB_BUILD_TOKEN
+RUN git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
 
 # cache modules
 RUN go mod download
 
 # copy source code
-COPY $EWPATH/main.go main.go
-COPY $EWPATH/converter/ converter/
-COPY $EWPATH/database/ database/
-COPY $EWPATH/queue/ queue/
-COPY $EWPATH/run/ run/
-COPY $EWPATH/subscribe/ subscribe/
-COPY $EWPATH/liveness/ liveness/
-
+COPY $EW_PATH/main.go main.go
+COPY $EW_PATH/converter/ converter/
+COPY $EW_PATH/database/ database/
+COPY $EW_PATH/queue/ queue/
+COPY $EW_PATH/run/ run/
+COPY $EW_PATH/subscribe/ subscribe/
+COPY $EW_PATH/liveness/ liveness/
 
 # build
 RUN CGO_ENABLED=1 go build -ldflags '-linkmode external -w -extldflags "-static"' -o event-writer main.go
 
 FROM alpine:3.14
-ENV EWPATH=cmd/event-writer
+ENV EW_PATH=cmd/event-writer
 
-COPY --from=builder /workspace/$EWPATH/event-writer /event-writer
+COPY --from=builder /workspace/$EW_PATH/event-writer /event-writer
 
-COPY $EWPATH/start.sh /
+COPY $EW_PATH/start.sh /
 RUN apk add --no-cache tini
 
 ENTRYPOINT [ "/sbin/tini", "--", "/start.sh"]
