Wire in logr implementation

--- a/charts/mccp/templates/gitops-repo-broker/deployment.yaml
+++ b/charts/mccp/templates/gitops-repo-broker/deployment.yaml
@@ -20,6 +20,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      serviceAccountName: {{ include "mccp.serviceAccountName" . }}
       volumes:
       - name: git-key
         secret:
