--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -52,6 +52,10 @@
     "weaveworks-ui-components": "0.22.4",
     "web-vitals": "^1.0.1"
   },
+  "resolutions": {
+    "**/react": "^17.0.2",
+    "**/react-dom": "^17.0.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
