--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -139,7 +139,7 @@ jobs:
     - name: Build all the services
       env:
         GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
-      run: make -j4 GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN}
+      run: make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN}
     - name: Store mccp binaries
       uses: actions/upload-artifact@v2
       with:
