--- a/cmd/clusters-service/pkg/charts/testdata/with_profiles/index.yaml
+++ b/cmd/clusters-service/pkg/charts/testdata/with_profiles/index.yaml
@@ -39,11 +39,60 @@ entries:
       description: Simple demo profile
       digest: aaff4545f79d8b2913a10cb400ebb6fa9c77fe813287afbacf1a0b897cdffffff
       home: https://helm.sh/helm
-      name: demo-profile
+      name: demo-profile-1
+      icon: https://helm.sh/icon.png
+      keywords:
+      - gitops
+      - demo
+      maintainers:
+      - name: WeaveWorks
+        email: maintainers@weave.works
+      - name: CNCF
+        url: cncf.io
       sources:
       - https://github.com/helm/charts
       urls:
       - https://technosophos.github.io/tscharts/demo-profile-1.1.0.tgz
       version: 1.1.0
+    - created: 2016-10-06T16:23:20.499543808-06:00
+      description: Simple demo profile
+      digest: aaff4545f79d8b2913a10cb400ebb6fa9c77fe813287afbacf1a0b897cdffffff
+      home: https://helm.sh/helm
+      name: demo-profile
+      icon: https://helm.sh/icon.png
+      keywords:
+      - gitops
+      - demo
+      maintainers:
+      - name: WeaveWorks
+        email: maintainers@weave.works
+      - name: CNCF
+        url: cncf.io
+      sources:
+      - https://github.com/helm/charts
+      urls:
+      - https://technosophos.github.io/tscharts/demo-profile-1.1.0.tgz
+      version: 1.1.1
+    - created: 2016-10-06T16:23:20.499543808-06:00
+      annotations:
+        weave.works/profile: demo-profile
+      description: Simple demo profile
+      digest: aaff4545f79d8b2913a10cb400ebb6fa9c77fe813287afbacf1a0b897cdffffff
+      home: https://helm.sh/helm
+      name: demo-profile-2
+      icon: https://helm.sh/icon.png
+      keywords:
+      - gitops
+      - demo
+      maintainers:
+      - name: WeaveWorks
+        email: maintainers@weave.works
+      - name: CNCF
+        url: cncf.io
+      sources:
+      - https://github.com/helm/charts
+      urls:
+      - https://technosophos.github.io/tscharts/demo-profile-1.1.2.tgz
+      version: 1.1.2
 
 generated: 2016-10-06T16:23:20.499029981-06:00
