--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -39,6 +39,7 @@ config:
   capi:
     templates:
       namespace: default
+      injectPruneAnnotation: true
     clusters:
       namespace: default
     repositoryURL: ''
